# yoloface-50k

./: README.md  yoloface-50k.cfg
firmware/: main.cpp  yoloface.c  yoloface.h  yoloface.ioc
firmware/X-CUBE-AI/App/: network.c  network.h  network_config.h  network_data.c  network_data.h  network_generate_report.txt
ncnn/: CMakeLists.txt  main.cpp  yoloface-opt.param
ncnn/include/ncnn/: ncnn_export.h  platform.h
pytorch/: onnx_prediction.py  yoloface-50k.onnx  yoloface.py
tensorflow/: h5_predition.py  h5_to_pb.py  pb_prediction.py  yolo_to_h5.py  yoloface.h5  yoloface.pb
tflite/: tflite_prediction.py  tflite_quantize.py  yoloface.tflite  yoloface_int8.tflite
